Fix Contact Info Spacing

--- a/weather/CSS/preston_large.css
+++ b/weather/CSS/preston_large.css
@@ -17,12 +17,19 @@
     }
     #contact_info p {
         font-size: 16px;       
-    }  
+    } 
+    #contact_info p:nth-of-type(1) {
+        letter-spacing: 0;      
+    } 
+    #email_w {
+        font-size: 17px;
+        letter-spacing: 1.5px;
+    }
     .social img{
         width: 64px;
     }
     .social a {
-        margin-right: 46px;
+        margin-right: 76px;
      }
     .social a:hover {       
         padding-top: 54px;       
